# ElliNetIRCd

./: LICENSE  README.md  renovate.json  requirements.txt  setup.cfg
.github/workflows/: packaging.yml  testing.yml
aioircd/: __init__.py  states.py
ellinetircd/: __init__.py  __main__.py  channel.py  exceptions.py  server.py  states.py  user.py
tests/: common.py  test_protocole.py
