[metadata]
name = ellinetircd
version = file:version.txt
description = ElliNetIRCd - an asynchronous IRC server
long_description = file:README.md
long_description_content_type = text/markdown
author = ElliNet13
author_email = your@email.com
url = https://github.com/ElliNet13/ElliNetIRCd
download_url = https://pypi.org/project/ellinetircd/
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  Framework :: AsyncIO
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = ellinetircd
python_requires = >=3.9
install_requires =
  trio